<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">Say Their Names</string>
    <string name="say_their_names">Say their names</string>
    <string name="home">HOME</string>
    <string name="donations">DONATIONS</string>
    <string name="petitions">PETITIONS</string>
    <string name="context">The death of George Floyd occurred on May 25, 2020, when Derek Chauvin, a white Minneapolis police officer, kneeled on his neck for at least seven minutes</string>
    <string name="settings">SETTINGS</string>
    <string name="full_name_title">FULL NAME</string>
    <!-- unused? -->
    <string name="age_title">AGE</string>
    <string name="context_title">CONTEXT</string>
    <string name="media_title">MEDIA</string>
    <string name="action_settings">Settings</string>
    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>
    <string name="action_bookmark">Bookmark</string>
    <!-- unused? -->
    <string name="donate">Donate</string>


    <!-- person from ios -->
    <string name="person.say_their_names">Say their names</string>
    <string name="person.age">Age</string>
    <string name="person.children">Children</string>
    <string name="person.location">Location</string>
    <string name="person.their_story">Their Story</string>
    <string name="person.outcome">Outcome</string>
    <string name="person.news">News</string>
    <string name="person.media">Media</string>
    <string name="person.hashtags">Social Media Hashtags</string>
    <!--    <string name="person.hashtagCopyTip">Press and hold to copy</string>-->
    <!--    <string name="person.copied">Copied</string>-->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="george_floyd">GEORGE FLOYD</string>
    <string name="_2">2</string>
    <string name="minnesota">MINNESOTA</string>
    <string name="button">Button</string>
    <string name="date_of_incident">00.00.0000</string>
    <string name="person_name">Firstname Lastname</string>
    <string name="donation_image">donation image</string>

    <string name="blacklivesmatter">#BLACKLIVESMATTER</string>

    <string name="how_to_get_involved">How to get involved</string>

    <string name="donate_now">DONATE NOW</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="title">Title</string>
    <string name="verified">verified</string>
    <string name="description">Description</string>
    <string name="find_out_more">Find Out More</string>
    <string name="sign_this_petition">SIGN THIS PETITION</string>
    <string name="share_this_petition">SHARE THIS PETITION</string>
    <string name="content">CONTENT</string>
    <string name="about">ABOUT</string>
    <string name="get_involved.slack.title">HOW DO I GET INVOLVED?</string>
    <string name="get_involved.slack.button">JOIN OUR SLACK CHANNEL</string>
    <!-- Get Involved - Slack -->

    <string name="get_involved.developer.title">HOW DO I GET INVOLVED AS A DEVELOPER?</string>
    <string name="get_involved.developer.button">VIEW OUR GITHUB</string>

    <!-- Get Involved - Developer -->
    <string name="get_involved.twitter.title">JOIN US ON TWITTER</string>
    <string name="get_involved.twitter.button">FOLLOW US</string>

    <!-- Get Involved - Twitter -->
    <string name="more_history.aboutDesc">Say Their Names is a social movement to raise awareness for all the black victims of racial inequality all around the world. This movement is in support of the overall Black Lives Matter movement and aims to highlight individuals affected by anti-Black Violence. Say Their Names movement calls attention and demands justice for all victims.</string>
    <string name="more">MORE</string>
    <string name="hashtags">Social Media Hashtags</string>

    <string name="media">Media</string>
    <!-- More -->
    <string name="news">News</string>
    <string name="about_this_project.title">About this project</string>
    <string name="about_this_project_details">Welcome to the Say Their Names Project. Our aim is to build an open-source platform to raise awareness of the injustice and often forgotten names of racial inequality. We strive to identify and amplify verified organizations to ensure donations are reaching those who can make the most impact with it.</string>

    <string name="request_edit_or_removal.title">REQUEST AN EDIT OR REMOVAL</string>
    <string name="request_edit_or_removal.details">If you would like to propose an edit to a victim page or if you are a representative of the victim and would like the victim to be removed from this directory please send us a message on Twitter.</string>
    <string name="more_history.aboutTitle">SOME HISTORY ON THE SAY THEIR NAMES MOVEMENT</string>
    <string name="did_we_miss_someone">DID WE MISS SOMEONE?</string>
    <string name="request_to_add_new_name">REQUEST TO ADD A NAME</string>

    <string name="title_activity_settings">SettingsActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="filters">
        <item>Age</item>
        <item>Location</item>
        <item>State</item>

    </string-array>
    <string-array name="tag_donation">
        <item>All</item>
        <item>Victims</item>
        <item>Protesters</item>
        <item>Others</item>
    </string-array>

    <string name="preference_key_theme">preference_key_theme</string>
</resources>